refactoring, fix minor layout problems

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -224,4 +224,8 @@ body {
   background-color: white;
 }
 
+.horiz-centered {
+  display: inline-flex;
+  align-items: center;
+}
 
